# hashnode-article-sentiment-analysis-GCP

./: Dockerfile  README.md  pyproject.toml  requirements.txt  sentiment.py
.github/workflows/: codeql.yml  docker-image.yml
